[[bench]]
name = "prepare"
harness = false

[package]
name = "glyphon"
description = "Fast, simple 2D text rendering for wgpu"
version = "0.9.0"
edition = "2024"
rust-version = "1.85.0"
homepage = "https://github.com/grovesNL/glyphon.git"
repository = "https://github.com/grovesNL/glyphon"
license = "MIT OR Apache-2.0 OR Zlib"

[dependencies]
unicode-width = "0.2.1"
etagere = "0.2.15"
cosmyc-text = { git = "https://github.com/cyrup-ai/cosmyc-text", branch = "main" }
rustc-hash = "2.1.1"

[dev-dependencies]
winit = "0.30.12"
pollster = "0.4.0"

[dependencies.wgpu]
git = "https://github.com/cyrup-ai/wgpu"
default-features = false
features = [ "wgsl",]

[dependencies.lru]
version = "0.16.1"
default-features = false

[dev-dependencies.wgpu]
git = "https://github.com/cyrup-ai/wgpu"

[dev-dependencies.resvg]
version = "0.45.1"
default-features = false

[dev-dependencies.criterion]
version = "0.7.0"
features = [ "html_reports",]
